# agent-audit-kit

./: .agent-audit-kit.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.cves.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEP_ANALYSIS.md  Dockerfile  LICENSE  README.md  ROADMAP_2026.md  SECURITY.md  action.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirements-lock.txt  rules.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: badge-ox-coverage.yml  ci.yml  codeql.yml  coverage-page.yml  cve-watcher.yml  docker-nightly.yml  docs.yml  mcp-security-index.yml  release.yml  scorecard.yml  self-scan.yml  sync-repo-metadata.yml  sync-rule-count.yml
agent_audit_kit/: __init__.py  advisories.py  bundle.py  cli.py  coverage.py  diff.py  discovery.py  engine.py  fix.py  llm_scan.py  models.py  pinning.py  scoring.py  verification.py  vuln_db.py  watch.py
agent_audit_kit/autofix/: __init__.py  langgraph_toolnode.py
agent_audit_kit/checks/: __init__.py  economic_drift.py  openclaw.py
agent_audit_kit/cli_modules/: __init__.py  rule_lint.py
agent_audit_kit/corpus/: __init__.py  manifest.py
agent_audit_kit/data/: aivss-v08-defaults.json  (+7 more)
benchmarks/: README.md  crawler.py  index_builder.py  run_benchmark.sh  sources.py
data/: history.json  index.json
docs/: 404.html  CNAME  azure-pipelines.md  ci-cd.md  circleci.md  comparison-gitlab-agentic-sast.md  comparison.md  comparisons.md  disclosure-policy.md  getting-started.md  gitlab-ci.md  index.html  index.md  metrics.md  mkdocs.yml  owasp-agentic-coverage.md  owasp-mapping.md  research-log.md  rule-schema.md  rules.md  sitemap.xml
examples/: README.md  run-all-examples.sh
launch/: MARKET-RESEARCH-2026-04-12.md  blog-50-mcp-servers.md  demo.cast  devto-article.md  owasp-outreach.md  reddit-r-devops.md  reddit-r-machinelearning.md  reddit-r-netsec.md  show-hn.md  twitter-thread.md
public/: owasp-agentic-coverage.json
releases/: v0.3.10.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md
schema/: ox-cve-manifest.schema.json
scripts/: backfill_cve_property.py  build_coverage_page.py  close_duplicate_cve_issues.py  cve_watcher.py  gen_owasp_coverage.py  generate_lockfile.py  install-pre-commit.sh  sync_repo_metadata.py  sync_rule_count.py  sync_scanner_count.py  watch_csa_mcp_baseline.py
server/: aaronsteers__privatebin-mcp.html  abilityai__agent-ruby.html  abilityai__trinity.html  aegntic__ae-co-system.html  agisota___dotfiles.html  ancient23__agent-base.html  andrewaltimit__documentation.html  angkira__ninja-cli-mcp.html  anyplatform__platform_workspace.html  atsentia__dinbutler.html  axiomantic__audiomancer.html  basalt-ai__cobalt.html  bbfox0703__roslyncsmcp.html  bennoloeffler__bassi.html  bmorri13__dividend_tracker.html  bobmatnyc__ai-power-rankings.html  bxxf__todo-mcp-assignment.html  chasekolozsy__ankichat.html  chattersorg__chatters.html  confenge__etp-express.html  coorpacademy__claude-workshop.html  cyl19970726__code3-workspace.html  danielscholl-osdu__hostk8s.html  danishi__arcadia.html  danmayer__coverband_rails_example.html  davidvojvodic__automation-site.html  dexploarer__claudius-skills.html  dg1an3__algt.html  diegofornalha__jira-ai-crewai-mcp.html  disler__agentic-drop-zones.html  disler__quick-data-mcp.html  djehring__phc-conference-2026.html  dnyoussef__context-cascade.html  dyoshikawa__smartphone-vibe-coding.html  ellisapotheosis__project-nyra.html  ethrdev__cognitive-memory.html  fbratten__from-blueprint-to-application.html  fredjr__vertaai.html  getsentry__spotlight.html  golgoth31__sreportal.html  (+49 more)
tests/: conftest.py  test_a2a_2026.py  test_a2a_protocol.py  test_action.py  test_agent_config.py  test_aicm.py  test_anthropic_sdk_hardening.py  test_cli.py  test_compliance_output.py  test_compliance_v2.py  test_csa_baseline_watcher.py  test_cve_2025_66335.py  test_cve_2025_66414_python_sdk.py  test_cve_2026_20205_config.py  test_cve_2026_20205_splunk.py  test_cve_2026_32211.py  test_cve_2026_32211_server.py  test_cve_2026_33626.py  test_cve_2026_35568_java.py  test_cve_2026_35577_apollo.py  test_cve_2026_39313.py  test_cve_2026_40576_excel.py  test_cve_2026_40608_next_ai_draw.py  test_cve_2026_41481.py  test_cve_2026_41488.py  test_cve_fix_and_watch_and_advisories.py  test_cve_watcher_dedup.py  test_cves_2026.py  test_cyclonedx_aibom.py  test_diff.py  test_discovery.py  test_engine.py  test_engine_ignore_paths.py  test_examples.py  test_fix.py  test_flowise.py  test_gha_immutable.py  test_healthcare_ai_and_state_privacy.py  test_hook_injection.py  test_index_builder.py  (+56 more)
vscode-extension/: .vscodeignore  CLAUDE.md  README.md  package.json  tsconfig.json
(+343 files in other folders)
